Web Penjadwalan Finish

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -7,7 +7,7 @@ $font-family-sans-serif: "Nunito", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
-// Colors
+// Colors.
 $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
